# quantette

./: .gitignore  Cargo.toml  Changelog.md  README.md  justfile  typos.toml
.github/: dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
benches/: color_counts.rs  dither.rs  kmeans.rs  wu.rs
docs/: Benchmarks and Accuracy.md  Examples.md
examples/: accuracy.rs  cli.rs  simplecli.rs
examples/plot/: main.rs  plot.gnuplot  plot.rs
img/unsplash/: README.md
scripts/: benchmarks.nu  examples.nu
src/: color_counts.rs  dither.rs  kmeans.rs  lib.rs  traits.rs  types.rs  wu.rs
src/api/: colorspace.rs  image_pipeline.rs  mod.rs  palette_pipeline.rs  quantize_method.rs
src/kmeans/: kdtree.rs  minibatch.rs  mod.rs  online.rs
util/: util.rs
