[package]
name = "quantette"
version = "0.1.0"
edition = "2021"
description = "A fast and high quality image quantizer and palette generator. Supports the CIELAB, Oklab, and sRGB color spaces."
homepage = "https://github.com/Ivordir/quantette"
repository = "https://github.com/Ivordir/quantette"
license = "MIT OR Apache-2.0"
include = ["src"]
keywords = ["quantization", "palette", "color", "dither", "kmeans"]
categories = ["multimedia::images"]

[dependencies]
