[package]
name = "quantette"
version = "0.1.0"
edition = "2021"
description = "A fast and high quality image quantizer and palette generator. Supports the CIELAB, Oklab, and sRGB color spaces."
homepage = "https://github.com/Ivordir/quantette"
repository = "https://github.com/Ivordir/quantette"
license = "MIT OR Apache-2.0"
include = ["src"]
keywords = ["quantization", "palette", "color", "dither", "kmeans"]
categories = ["multimedia::images"]

[features]
default = ["pipelines", "colorspaces", "threads", "image", "kmeans"]

# Exposes a high-level API via the `ImagePipeline` and `PalettePipeline` builder structs.
# Turn this feature off to reduce compile times if you do not need the high-level API.
pipelines = []

# Allows using CIELAB or Oklab as the quantization color space in the high-level API.
# Turn this feature off to reduce compile times if you do not want alternate color spaces.
colorspaces = ["pipelines"]

# Exposes parallel versions of most algorithms.
threads = ["rayon"]

# Enables integration with the `image` crate.
image = ["dep:image"]

# Exposes kmeans as an alternative quatization method
# which gives higher quality results but is slower to run.
kmeans = ["rand", "rand_distr", "rand_xoshiro"]

[dependencies]
bitvec = "1.0.1"
num-traits = "0.2.16"
ordered-float = "4.1.0"
palette = { version = "0.7.3", default-features = false, features = ["std"] }
image = { version = "0.24.7", default-features = false, optional = true }
rayon = { version = "1.8.0", optional = true }
rand = { version = "0.8.5", default-features = false, features = ["alloc"], optional = true }
rand_distr = { version = "0.4.3", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
